--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "get-post",
+  "name": "fastapp-one",
   "version": "0.0.0",
+  "homepage": "https://kavyashree218.github.io/fastapp-one",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "predeploy": "npm build",
+    "deploy": "gh-pages -d build"
   },
   "private": true,
   "dependencies": {
